minor array fix